[package]
name = "fqttc"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
futures-util = "0.3.8"
bytes = "0.6.0"
argh = "0.1.4"
anyhow = "1.0.35"
number_prefix = "0.4.0"
mqtt3 = { path = "../mqtt3" }
tokio-util = { version = "0.5", features = ["codec"] }
