[package]
name = "fqttd"
version = "0.1.0"
authors = ["Denis Molokanov <dmolokanov@users.noreply.github.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.3", features = ["full"] }
futures-util = { version = "0.3.8", features = ["sink"] }
bytes = "0.6.0"
argh = "0.1.4"
anyhow = "1.0.35"
number_prefix = "0.4.0"
tokio-util = { version = "0.5", features = ["codec"] }
mqtt3 =  { path = "../mqtt3" }
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-flame = "0.1.0"

[profile.release]
debug = true
